samples/_failures_safe/1761564058_1e93a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_740fb251.c: In function ‘main’:
./samples/SAFE/__tmp_740fb251.c:137:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  137 |     int rows
      |     ^~~
./samples/SAFE/__tmp_740fb251.c:137:5: error: expected declaration or statement at end of input
